fixed gap between radio inputs for safari

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -84,7 +84,7 @@ section {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  gap: 1rem;
+  // gap: 1rem;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -94,6 +94,7 @@ section {
   border-radius: 10px;
   cursor: pointer;
   width: 50%;
+  margin: 10px;
 }
 
 input[type="radio"] {
@@ -153,6 +154,7 @@ input[type="number"] {
   padding: 15px 25px;
   cursor: pointer;
   background-color: #293038;
+  margin: 10px;
 }
 
 .results-heading {
@@ -197,6 +199,10 @@ input[type="number"] {
 
   h6 {
     font-size: 1.1rem;
+  }
+
+  .step__section {
+    margin: 25px 0;
   }
 
   .options {
